--- a/public/index.html
+++ b/public/index.html
@@ -11,16 +11,34 @@
     <!-- Header -->
     <header class="header p-3 position-absolute start-0 top-0 end-0">
         <div class="d-flex justify-content-between align-items-center">
-            <a href="/" class="text-shadow text-decoration-none fs-5 text-white">Create Cool Movies</a>
+            <a href="/" class="header__link text-shadow text-decoration-none fs-5">Create Cool Movies</a>
             <div>
-                <button class="navbar-toggler text-white" type="button" data-bs-toggle="collapse" data-bs-target="#navbar">
-                    <svg class="mb-1" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-caret-down-square-fill" viewBox="0 0 16 16">
+                <button class="header__button navbar-toggler text-white" type="button" data-bs-toggle="collapse" data-bs-target="#navbar">
+                    <svg class="header__arrow mb-1" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-caret-down-square-fill" viewBox="0 0 16 16">
                         <path d="M0 2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2zm4 4a.5.5 0 0 0-.374.832l4 4.5a.5.5 0 0 0 .748 0l4-4.5A.5.5 0 0 0 12 6H4z"/>
-                      </svg><span class="text-shadow ps-1">MENU</span>
+                      </svg><span class="header__text text-shadow ps-1">MENU</span>
                 </button>
             </div>
         </div>
     </header>
+
+    <!-- Navbar -->
+    <nav class="navigation collapse navbar-collapse dropdown-nav" id="navbar">
+        <ul class="navigation__list d-flex gap-4 justify-content-center p-0">
+            <li>
+                <a href="/" class="navigation__link">Home</a>
+            </li>
+            <li>
+                <a href="/" class="navigation__link">About</a>
+            </li>
+            <li>
+                <a href="/" class="navigation__link">Programs</a>
+            </li>
+            <li>
+                <a href="/" class="navigation__link">Contact</a>
+            </li>
+        </ul>
+    </nav>
 
     <!-- Cover section -->
     <section class="cover">
