Programs section - version 1 for desktop

--- a/public/index.html
+++ b/public/index.html
@@ -58,5 +58,34 @@
             </div>
         </div>
     </section>
+
+    <!-- Programs Section -->
+    <section class="programs container-xl my-5">
+        <div class="row">
+            <div class="col-12 d-md-flex justify-content-md-center">
+                <img class="programs__photo" src="/public/assets/img/studio.jpg" alt="A Picture of video studio with lights, camera and desk." loading="lazy">
+                <div class="ms-5 card__description">
+                    <h2>Working in studio</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat consequatur soluta alias officia ex sint accusamus eos, ab incidunt quasi tempora repellendus consectetur dolorem eum amet facere doloremque non quibusdam?</p>
+                </div>
+            </div>
+
+            <div class="reverse col-md-12 d-md-flex justify-content-md-center">
+                <img class="programs__photo" src="/public/assets/img/cam.jpg" alt="A Picture of studio camera." loading="lazy">
+                <div class="me-5 card__description card__description--right">
+                    <h2>Working in studio</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat consequatur soluta alias officia ex sint accusamus eos, ab incidunt quasi tempora repellendus consectetur dolorem eum amet facere doloremque non quibusdam?</p>
+                </div>
+            </div>
+
+            <div class="col-12 d-md-flex justify-content-md-center">
+                <img class="programs__photo" src="/public/assets/img/pc.jpg" alt="A Picture of laptop with video edition application." loading="lazy">
+                <div class="ms-5 card__description">
+                    <h2>Working in studio</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat consequatur soluta alias officia ex sint accusamus eos, ab incidunt quasi tempora repellendus consectetur dolorem eum amet facere doloremque non quibusdam?</p>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
